--- a/assets/style.css
+++ b/assets/style.css
@@ -87,6 +87,11 @@
         text-align: center;
         padding: 50px 20px;
         background: #f8f9fa;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        border-radius: 5px;
+        padding: 20px;
+        margin-top: 20px;
+        background-color: aliceblue;
         }
     .order-section h2 {
         font-family: 'Great Vibes', cursive;
